--- a/files/grub/grub.cfg
+++ b/files/grub/grub.cfg
@@ -1,4 +1,10 @@
-menuentry "TinyCore Linux" {
+menuentry "Tiny Core Linux (USB <= 2.0 GiB, without EFI partition)" {
+ loopback loop (hd1,gpt1)/boot-isos/Core-remastered.iso
+ linux (loop)/boot/vmlinuz waitusb=10 iso=sdc1 nodhcp
+ initrd (loop)/boot/core.gz
+}
+
+menuentry "Tiny Core Linux (USB > 2.0 GiB, with EFI partition)" {
  loopback loop (hd1,gpt2)/boot-isos/Core-remastered.iso
  linux (loop)/boot/vmlinuz waitusb=10 iso=sdc2 nodhcp
  initrd (loop)/boot/core.gz
