rewrite grub.cfg and documentation for the new auto-detection config

--- a/files/grub/grub.cfg
+++ b/files/grub/grub.cfg
@@ -1,11 +1,36 @@
-menuentry "Tiny Core Linux (USB <= 2.0 GiB, without EFI partition)" {
- loopback loop (hd1,gpt1)/boot-isos/Core-remastered.iso
- linux (loop)/boot/vmlinuz waitusb=10 iso=sdc1 nodhcp
+# this is intended to make the tdm_autoboot default to run after 5 seconds
+# though it currently doesn't work as of Nov/2022.
+#
+set default="Detect and show boot methods>tdm_autoboot"
+set timeout=5
+set timeout_style=countdown
+
+# this is the auto-detecting boot mode
+#
+menuentry "Target Display Mode (TinyCore, Auto-Detect USB Key)" --id tdm_autoboot {
+
+ # try detecting our TDM boot drive, by locating a device
+ # with the TINYCORE label, which will be store into the
+ # ${root} variable
+ search --no-floppy --set=root --label TINYCORE
+
+ echo "'Target Display Mode' boot device found at ${root}"
+ echo -n "Booting in ... "
+ sleep --verbose 3 
+
+ # reflect ${root} variable to mount the ISO file as a loopback device
+ loopback loop (${root})/boot-isos/Core-remastered.iso
+
+ # reflect to iso= kernel argument for locating
+ # the ISO file on this device during boot
+ #
+ # the following alternative syntax should work for UUID and LABEL:
+ # iso=UUID=xxxx-yyyy
+ # iso=LABEL=xyz
+ #
+ # as we don't know the UUID, the label is key for detecting it
+ #
+ linux (loop)/boot/vmlinuz waitusb=10 iso=LABEL=TINYCORE nodhcp
  initrd (loop)/boot/core.gz
 }
 
-menuentry "Tiny Core Linux (USB > 2.0 GiB, with EFI partition)" {
- loopback loop (hd1,gpt2)/boot-isos/Core-remastered.iso
- linux (loop)/boot/vmlinuz waitusb=10 iso=sdc2 nodhcp
- initrd (loop)/boot/core.gz
-}
